tests/errors/examples/if_condition_not_boolean.vg
<!-- Expected Error: Type mismatch - if condition requires boolean
     Context: Non-boolean value used as if condition
     
     The if condition expects a boolean value, but name is a string.
-->
<view name="Test">
  <div>
    <div>{name}</div>
    <if condition={name}>
      <then>
        <div>Name exists</div>
      </then>
      <else>
        <div>No name</div>
      </else>
    </if>
  </div>
</view>
